--- a/views/index-view.html
+++ b/views/index-view.html
@@ -1,14 +1,32 @@
-<div class="row" >
-     
-                <ul class="pager">
-                    
-                    <li class="next" style="position:center">
-                        <a ng-href="#/allmatches">Get all matches! &rarr;</a>
-                    </li>
-
-                    <li class="next" style="position:center">
-                        <a ng-href="#/teamstats">Get Teamwise Statistics! &rarr;</a>
-                    </li>
-                </ul>
-            
+<div  style="background-image: url({{ md.bgimg }})">
+  <div class="w3-row-padding w3-theme" >
+    <div class="w3-third w3-section">
+      <div class="w3-card-4">
+        <img src="img/teams.png" style="width:100%;height:100%">
+        <div class="w3-container w3-white">
+          <h4 style="  font-family: 'Amaranth'">TEAMS</h4>
+          <a ng-href="#/teamstats">View &rarr;</a>
+        </div>
+      </div>
+    </div>
+    <div class="w3-third w3-section">
+      <div class="w3-card-4">
+        <img src="img/stats.jpg" style="width:100%">
+        <div class="w3-container w3-white">
+          <h4 style="  font-family: 'Amaranth'">MATCHES</h4>
+          <a ng-href="#/allmatches">View &rarr;</a>
+        </div>
+      </div>
+    </div>
+    <div class="w3-third w3-section">
+      <div class="w3-card-4">
+        <img src="img/partners.png" style="width:100%">
+        <div class="w3-container w3-white">
+          <h4 style="  font-family: 'Amaranth'">PARTNERS</h4>
+          <a ng-href="#/partners">View &rarr;</a>
+        </div>
+      </div>
+      <br><br><br>
+    </div>
+  </div>
 </div>
