--- a/views/match-details.html
+++ b/views/match-details.html
@@ -1,37 +1,31 @@
-<div ng-controller="mainController" >
+<div style="font-family: 'Amaranth'; font-size:1.5em">
  
 
 <div class="panel-group">
 	<div class="panel panel-default">
+      <div class="panel-heading">
+        <h2 class="panel-title" style=" font-family: 'Amaranth'">
+        Match Statistics
+        </h2>
+      </div>
    		<div class="panel-body">
-			<div  ng-if="yeardet==0">
-				<p>Match Name :  {{ first[whichmatch].name }}</p>
-      	<p>Match Date: {{first[whichmatch].matches[roundsdet].date }} </p>
-      	<p>{{first[whichmatch].matches[roundsdet].team1.name }} VS  {{first[whichmatch].matches[roundsdet].team2.name }} </p>
-    		<p>{{first[whichmatch].matches[roundsdet].team1.name }} Scored: {{first[whichmatch].matches[roundsdet].score1 }} points </p>
-    		<p>{{first[whichmatch].matches[roundsdet].team2.name }} Scored: {{first[whichmatch].matches[roundsdet].score2 }} points </p>
+			<div >
+				<p>Match Name :  {{ matchdetails.roundName }}</p>
+      	<p>Match Date: {{matchdetails.matchDate | date:"fullDate"}} </p>
+      	<p> <a href="#/teams/{{matchdetails.team1Code}}/{{ matchdetails.team1Key }}"> {{matchdetails.team1Name }} </a>  VS <a href="#/teams/{{matchdetails.team2Code}}/{{ matchdetails.team2Key }}"> {{matchdetails.team2Name }} </a></p>
+    		<p>{{matchdetails.team1Name }} Scored: {{matchdetails.team1Score }} points </p>
+    		<p>{{matchdetails.team2Name }} Scored: {{matchdetails.team2Score }} points </p>
 
     	</div>
-    	<div  ng-if="yeardet!=0">
-				<p>Match Name :  {{ second[whichmatch].name }}</p>
-    		<p>Match Date: {{second[whichmatch].matches[roundsdet].date }} </p>
-    		<p>{{second[whichmatch].matches[roundsdet].team1.name }} VS {{second[whichmatch].matches[roundsdet].team2.name }}</p>
-    		<p>{{second[whichmatch].matches[roundsdet].team1.name }} Scored: {{second[whichmatch].matches[roundsdet].score1 }} </p>
-    		<p>{{second[whichmatch].matches[roundsdet].team2.name }} Scored: {{second[whichmatch].matches[roundsdet].score2 }} </p>
-			</div>
-      		<div ng-if="first[whichmatch].matches[roundsdet].score1 > first[whichmatch].matches[roundsdet].score2 && yeardet==0 ">
-      			Winner: {{first[whichmatch].matches[roundsdet].team1.name }}
+
+      		<div ng-if="matchdetails.team1Score > matchdetails.team2Score ">
+      			Winner: {{matchdetails.team1Name }}
       		</div>
-      		<div ng-if="first[whichmatch].matches[roundsdet].score1 < first[whichmatch].matches[roundsdet].score2 && yeardet==0">
-      			Winner: {{first[whichmatch].matches[roundsdet].team2.name }}
+      		<div ng-if="matchdetails.team1Score < matchdetails.team2Score">
+      			Winner: {{matchdetails.team2Name }}
       		</div>
-      		<div ng-if="second[whichmatch].matches[roundsdet].score1 > second[whichmatch].matches[roundsdet].score2 && yeardet==1 ">
-      			Winner: {{second[whichmatch].matches[roundsdet].team1.name }}
-      		</div>
-      		<div ng-if="second[whichmatch].matches[roundsdet].score1 < second[whichmatch].matches[roundsdet].score2 && yeardet==1">
-      			Winner: {{second[whichmatch].matches[roundsdet].team2.name }}
-      		</div>
-      		<div ng-if="first[whichmatch].matches[roundsdet].score1 == first[whichmatch].matches[roundsdet].score2 ">
+
+      		<div ng-if="matchdetails.team1Score == matchdetails.team2Score ">
       			Match Draw
       		</div>
       		<div style="float:right" >
