--- a/views/teamstats.html
+++ b/views/teamstats.html
@@ -1,25 +1,13 @@
-<div ng-controller="mainController">
-	<div class="panel-group">
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h4 class="panel-title">
-   			Teams
-        </h4>
+<div style="margin:10px;">
+   <div class="row">
+      <div ng-repeat="i in matchdetails.imgs" class="col-md-4">
+         <!-- START widget-->
+         <br>
+         <img ng-src="{{ i }}" alt="Image" class="img-responsive" />
+         <br>
+         <p  style="text-align:center;  font-family: 'Amaranth'; font-size:20px;">{{matchdetails.a[$index]}}<br></p>
+         <br>
+         <!-- END widget-->
       </div>
-        <div class="panel-body">
-        <div ng-repeat="i in a ">
-        	<a href="#/teams/{{a.indexOf(i)}}"> {{i}}</a> <br>
-        </div>
-        		
-        	<div style="float:right" >
-      		
-    	    	<a href="#/">Back &rarr;</a>
-        
-      		</div>
-
-        </div>
-
-    </div>
-  </div>
-
+   </div>
 </div>
